--- a/views/fragments/navbar.ejs
+++ b/views/fragments/navbar.ejs
@@ -29,7 +29,7 @@
             >
                 
                 <img
-                src="images/LOGO.png"
+                src="images/logo.png"
                 class="animate__animated  animate__backInLeft img-fluid logo navbar-brand d-none d-lg-block " 
                 alt="get a vaccine"
                 title="get a vaccine for yourself"
