--- a/views/fragments/admin.ejs
+++ b/views/fragments/admin.ejs
@@ -58,6 +58,8 @@
       <div class="name-job">
         <div class="profile_name">Admin</div>
       </div>
+      <a href="/logout">
+      <i class='bx bx-log-out'></a></i>
     </div>
   </li>
 </ul>
