--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,30 +43,16 @@
                     <div class="login-box">
                         <div class ="card">
                             <div class="card-body">
-                                <form
-                                    class="row login-form col-sm-12"
-                                    action="/login"
-                        method="post"
-                    >
+                                <form class="row login-form col-sm-12" action="/login"method="post">
                         <br />
                         <h3 class="header-title">Iniciar sesión</h3>
                         <div class="form-group">
                             <label for="usuario"></label>
-                            <input
-                                name="usuario"
-                                type="text"
-                                class="form-control"
-                                placeholder="Ingrese usuario"
-                            />
+                            <inputname="usuario" type="text" class="form-control" placeholder="Ingrese usuario"/>
                         </div>
                         <div class="form-group">
                             <label for="contraseña"></label>
-                            <input
-                                name="contraseña"
-                                type="Password"
-                                class="form-control"
-                                placeholder="Ingrese contraseña"
-                            />
+                            <input name="contraseña" type="Password" class="form-control" placeholder="Ingrese contraseña"/>
                         </div>
                         <div class="form-group-button">
                             <button
